--- a/demo.css
+++ b/demo.css
@@ -5,8 +5,18 @@
 	color: #000;
 	left:0px;
 	display: block;
-	position: initial;
+	position: relative;
 	text-align: left;
+}
+.legend {
+	float:right;
+	display: inline-block;
+	position: relative;
+	right: 0;
+	margin: 10px;
+	z-index: -20;
+	width: 100px;
+	height: 20px;
 }
 
 svg { 
